<resources>
    <string name="app_name">loginScreen</string>
    <string name="RoomCodeHint">Enter Exam... (By Code)</string>
    <string name="classCodeHint">Register for a class... (By Code)</string>
    <string name="sendButtonText">Send</string>
    <string name="preExamScanRequest">Please submit a picture of your SFU ID to enter.</string>
    <string name="cameraButtonText">Camera</string>
    <string name="cameraFileDirTitleText">Image:</string>
    <string name="cameraSubmitText">Submit</string>
    <string name="examEntryImageContentDesc">Image of ID Card</string>
    <string name="mainLoginTextButtonText">Login</string>
    <string name="mainTitleText">ProProct</string>
    <string name="mainEmailTextHint">Email</string>
    <string name="mainPasswordTextHint">Password</string>
    <string name="mainAttemptsLeftText">Attempts Left:</string>
    <string name="mainLoginButton">Login</string>
    <string name="mainCloseButton">Close</string>
    <string name="mainSignUpButton">Sign Up</string>
    <string name="title_activity_sign_up">signUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="FirstNameHint">First Name</string>
    <string name="LastNameHint">Last Name</string>
    <string name="signUpCheckButtonText">Check</string>
    <string name="radioButtonStudent">Student</string>
    <string name="radioButtonProfessor">Professor</string>
    <string name="signUpButtonTitle">I am a...</string>
    <string name="signUpStudentIDHint">Student Number</string>
    <string name="signUpSubmitButton">Submit</string>
    <string name="createClassTitleText">Welcome, Professor!</string>
    <string name="createClassButton">Create a Class</string>
    <string name="createExamButton">Create an Exam</string>
    <string name="createCheckExisting">Check your rooms</string>
    <string name="title_activity_create_class">createClass</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="firstfragment">Hello</string>
    <string name="title_activity_create_room">createRoom</string>
    <string name="createClassroomTitleText">Create a Class</string>
    <string name="createClassroomNameEntryHint">Class Title</string>
    <string name="createClassroomGeneratedCode">Your class code is:</string>
    <string name="createClassroomCreateButton">Create</string>
    <string name="createExamRoomTitle">Create an Exam</string>
    <string name="createExamRoomDateHint">Exam Date</string>
    <string name="createExamRoomNameHint">Exam Name</string>
    <string name="createExamRoomDatePrompt">Select a Date and Time:</string>
    <string name="createExamRoomDateMonth">Mo.</string>
    <string name="createExamRoomDateDay">Day</string>
    <string name="createExamDateYear">Year</string>
    <string name="createExamTimeHour">HH</string>
    <string name="createExamRoomTime">Time: (24h HH:MM)</string>
    <string name="createExamRoomDayTitleText">Date: (YYYY/MM/DD)</string>
    <string name="mainIDEntryHint">Student ID Number</string>
    <string name="classListCodeText">Code: %9d</string>
    <string name="roomEntryRegisterExamHint">Register for an exam... (By Code)</string>
    <string name="createExamLengthPromptText">Exam Length (In minutes, ex. 1 hour 30 minutes = 90 minutes)</string>
</resources>