<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width = "match_parent"
    android:layout_height = "match_parent" android:paddingLeft = "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin" tools:context = ".MainActivity">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/mainLoginButton"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/ProProct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginText"
        android:layout_centerHorizontal="true"
        android:text="@string/mainTitleText"
        android:textColor="#B80000"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ProProct"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="46dp"
        android:focusable="true"
        android:hint="@string/mainEmailTextHint"
        android:inputType="textEmailAddress"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignEnd="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/mainPasswordTextHint"
        android:inputType="textPassword"
        android:textColorHint="#000000" />

    <TextView
        android:id="@+id/attemptslefttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/mainAttemptsLeftText"
        android:textSize="25dp" />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:text = "5"
        android:id = "@+id/incorrectAttempts"
        android:layout_alignTop = "@+id/attemptslefttext"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true"
        android:layout_alignBottom = "@+id/attemptslefttext"
        android:layout_toEndOf = "@+id/loginText"
        android:textSize = "25dp"
        android:layout_toRightOf = "@+id/loginText"/>

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="88dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="59dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:layout_toStartOf="@+id/closebutton"
        android:layout_toLeftOf="@+id/closebutton"
        android:onClick="onLoginClick"
        android:text="@string/mainLoginButton" />

    <Button
        android:id="@+id/closebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_toEndOf="@+id/loginText"
        android:layout_toRightOf="@+id/loginText"
        android:onClick="onCloseClick"
        android:text="@string/mainCloseButton" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/attemptslefttext"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:text="@string/mainSignUpButton" />

</RelativeLayout>