<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".roomcode.createClass">

    <TextView
        android:id="@+id/createExamRoomTitle"
        android:layout_width="188dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/createClassroomTitleText"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createExamRoomNameEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/createClassroomNameEntryHint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createExamRoomTitle" />

    <TextView
        android:id="@+id/createExamRoomGeneratedCodeTitle"
        android:layout_width="105dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/createClassroomGeneratedCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createExamRoomNameEntry" />

    <TextView
        android:id="@+id/createExamRoomGeneratedCode"
        android:layout_width="182dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/createExamRoomGeneratedCodeTitle"
        app:layout_constraintTop_toBottomOf="@+id/createExamRoomNameEntry" />

    <Button
        android:id="@+id/createExamRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:onClick="onCreateClick"
        android:text="@string/createClassroomCreateButton"
        app:layout_constraintStart_toEndOf="@+id/createExamRoomNameEntry"
        app:layout_constraintTop_toBottomOf="@+id/createExamRoomTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>