<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".roomcode.createExam">


    <EditText
        android:id="@+id/examCreateRoomDayYear"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="0000"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createExamRoomDayTitle" />

    <EditText
        android:id="@+id/examCreateRoomDayMonth"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="00"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/examCreateRoomDayYear"
        app:layout_constraintTop_toBottomOf="@+id/createExamRoomDayTitle" />

    <EditText
        android:id="@+id/examCreateRoomDay"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="00"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/examCreateRoomDayMonth"
        app:layout_constraintTop_toBottomOf="@+id/createExamRoomDayTitle" />

    <TextView
        android:id="@+id/createExamRoomTitle"
        android:layout_width="256dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/createExamRoomTitle"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/examCreateRoomNameEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/createExamRoomNameHint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createExamRoomTitle" />

    <TextView
        android:id="@+id/createExamRoomGeneratedCodeTitle"
        android:layout_width="105dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/createClassroomGeneratedCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/examCreateRoomDayMonth" />

    <TextView
        android:id="@+id/examRoomGeneratedCode"
        android:layout_width="182dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/createExamRoomGeneratedCodeTitle"
        app:layout_constraintTop_toBottomOf="@+id/examCreateRoomDayMonth" />

    <Button
        android:id="@+id/createExamRoomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:onClick="onCreateClick"
        android:text="@string/createClassroomCreateButton"
        app:layout_constraintStart_toEndOf="@+id/examCreateRoomNameEntry"
        app:layout_constraintTop_toBottomOf="@+id/createExamRoomTitle" />

    <TextView
        android:id="@+id/createExamDatePrompt"
        android:layout_width="201dp"
        android:layout_height="17dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/createExamRoomDatePrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/examCreateRoomNameEntry" />

    <TextView
        android:id="@+id/createExamRoomTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/createExamRoomTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createExamDatePrompt" />

    <EditText
        android:id="@+id/examCreateRoomTimeHour"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="00"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createExamRoomTimeTitle" />

    <TextView
        android:id="@+id/examCreateRoomTimeSeparate"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text=":"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/examCreateRoomTimeHour"
        app:layout_constraintTop_toBottomOf="@+id/createExamRoomTimeTitle" />

    <EditText
        android:id="@+id/examCreateRoomTimeMin"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="00"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@+id/examCreateRoomTimeSeparate"
        app:layout_constraintTop_toBottomOf="@+id/createExamRoomTimeTitle" />

    <TextView
        android:id="@+id/createExamRoomDayTitle"
        android:layout_width="189dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/createExamRoomDayTitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/examCreateRoomTimeHour" />


</androidx.constraintlayout.widget.ConstraintLayout>